Small fix to add Java 1.4 compliance.